--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 		<script src="vendors/react/react.js"></script>
 		<script src="vendors/react/react-dom.js"></script>
 
-		<script type="text/javascript" src="dist/recipe-box.js"></script>
+		<script type="text/javascript" src="dist/main.js"></script>
 	</body>
 </html>
